# spira-mcp

./: .gitignore  README.md  pyproject.toml  spira_mcp_server.py
spira_mcp/: __init__.py  __main__.py  config.py  context.py  custom_properties.py  logging_setup.py  markdown.py  server.py  spira_api.py
spira_mcp/tools/: __init__.py  read.py  write.py
