[project]
name = "spira-mcp-server"
version = "1.0.0"
description = "Custom SpiraPlan MCP Server for Cursor"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.2",
]

[project.scripts]
spira-mcp = "spira_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
